--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,14 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
+@import url('./section.css');
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+@import url('./hero.css');
+@import url('./product.css');
+@import url('./gallery.css');
+@import url('./faq.css');
+@import url('./testimonial.css');
 @import url('./footer.css');
