--- a/src/css/testimonial.css
+++ b/src/css/testimonial.css
@@ -1,9 +1,19 @@
+
+/*!Styles for Mobile devices*/
+.container {
+  min-width: 335px;
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .testimonial__title{
 display: flex;
 align-items: center;
 justify-content: flex-start;
 flex-direction: column;
 gap: 24px;
+margin-bottom: 40px;
 }
 
 .testimonial__head{
@@ -17,8 +27,6 @@ color: #02060a;
 
 .testimonial__text{
 font-family: "IBM Plex Sans", sans-serif;
-font-weight: 700;
-font-size: 36px;
 line-height: 1.5;
 letter-spacing: -0.01em;
 text-align: center;
@@ -68,3 +76,20 @@ height: 21px
 }
 
 
+
+
+
+/*!tablet */
+@media (min-width: 376px) {
+  .testimonial__head {
+    font-size: 28px;
+  }
+}
+
+/* !Styles for Desktop devices */
+@media only screen and (min-width: 1312px) {
+  .container {
+    max-width: 1312px;
+  	padding: 0 80px;
+  }
+}
