--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,7 +12,7 @@
       url('../img/hero/background@2x-min.jpg') 2x
     );
   background-repeat: no-repeat, no-repeat;
-  background-position: left top, center;
+  /* background-position: left top, center; */
   background-size: cover, cover;
 }
 
