--- a/src/partials/testimonial.html
+++ b/src/partials/testimonial.html
@@ -1,7 +1,7 @@
 <section class="section testimonial">
 	<div class="container">
     <div class="testimonial-title">
-		  <h2 h2 class="testimonial-head">Щасливі історії, що надихають</h2>
+		  <h2 class="testimonial-head">Щасливі історії, що надихають</h2>
 		  <p class="testimonial-text">Ці хвостики вже знайшли свій дім. Ваш майбутній друг теж чекає на вас</p>
 	  </div>
 
