--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,5 +1,23 @@
-<section class="section product">
-	<div class="container">
-		
+<section class="products">
+	<div class="container products-container">
+		<div class="products-thumb">
+			<h2 class="products-title">Наші хвостики</h2>
+			<p class="products-text">Вони дуже чекають на знайомство з вами</p>
+		</div>
+
+		<ul class="categories-list"></ul>
+
+		<ul class="products-list"></ul>
+
+		<div class="products-not-found">
+			<p>Нічого не знайдено</p>
+		</div>
+
+		<button class="products-load-more" type="button">
+			Показати більше
+		</button>
+
 	</div>
+	
+
 </section>
