--- a/src/css/product.css
+++ b/src/css/product.css
@@ -79,7 +79,7 @@
     cursor: pointer;
     white-space: nowrap;
 }
-.categories__btn-active {
+.categories__btn--active {
     background: #eee9e3;
 }
 
@@ -233,15 +233,17 @@
     margin-top: auto;
 
 }
-
-
-.products-not-found {
+/* =========divNotFound============= */
+.not-found {
+    display: none;
+}
+.not-found--visible {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-direction: column;
 }
-
+/*=========button "Показати більше" =====*/
 .products-load-more {
     display: flex;
     align-items: center;
@@ -255,6 +257,26 @@
     width: 335px;
     height: 45px;
     background: #88765c;
+}
+.hidden {
+    display: none;
+}
+.product-card__btn {
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+.product-card__btn:hover,
+.product-card__btn:focus-visible {
+    background-color: #c3b49d;
+}
+.product-card__btn:active {
+    box-shadow: inset 0 4px 6px -2px rgba(0, 0, 0, 0.03), inset 0 12px 16px -4px rgba(0, 0, 0, 0.08);
+    background: #c3b49d;
+}
+.product-card__btn:disabled {
+    background-color: #e0dbd3;
+    color: #ffffff;
+    border-color: transparent;
+    cursor: not-allowed;
 }
 
 
