--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -9,13 +9,25 @@
 
 		<ul class="products-list"></ul>
 
-		<div class="products-not-found">
-			<p>Нічого не знайдено</p>
+		<div class="not-found">
+			<div class="not-found__icon">
+				<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#FF6B0A"
+					stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+					<circle cx="12" cy="12" r="10" />
+					<line x1="4.93" y1="4.93" x2="19.07" y2="19.07" />
+				</svg>
+			</div>
+			<h2 class="not-found__title">No Products Found</h2>
+			<p class="not-found__description">
+				We couldn't find any items matching your search.<br />Please try
+				different keywords.
+			</p>
 		</div>
 
-		<button class="products-load-more" type="button">
+		<button class="products-load-more js-products-load-more hidden" type="button">
 			Показати більше
 		</button>
+		<!-- <span class="products-loader hidden js-products-loader"></span> -->
 
 	</div>
 	
