add js projekt adopt

--- a/src/css/adopt-modal.css
+++ b/src/css/adopt-modal.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 64px 20px;
 }
 
 .is-hidden {
@@ -18,20 +19,12 @@ body.modal-open {
 }
 
 .adopt-modal {
-  border-radius: 8px;
-  padding: 64px;
-  width: 768px;
-  height: 768px;
-  max-width: 768px;
-  background-color: #f5f3f0;
   position: relative;
-}
-
-.adopt-modal-svg {
-  width: 24px;
-  height: 24px;
-  stroke: currentColor;
-  color: #000;
+  width: 100%;
+  max-width: 375px;
+  background-color: #f5f3f0;
+  border-radius: 8px;
+  padding: 64px 20px;
 }
 
 .adopt-modal-close {
@@ -40,31 +33,31 @@ body.modal-open {
   right: 20px;
   width: 32px;
   height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: transparent;
   border: none;
   border-radius: 50%;
   cursor: pointer;
-  transition: background-color 250ms ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.adopt-modal-svg {
+  width: 24px;
+  height: 24px;
+  stroke: currentColor;
 }
 
 .adopt-modal-title {
   font-family: var(--second-family);
   font-weight: 700;
-  font-size: 48px;
+  font-size: 42px;
   line-height: 120%;
-  letter-spacing: -0.01em;
   text-align: center;
-  color: #02060a;
-  margin: 48px;
-  margin-top: 0;
+  margin-bottom: 32px;
 }
 
 .adopt-modal-form {
-  width: 640px;
-  height: 476px;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -73,63 +66,111 @@ body.modal-open {
 .adopt-modal-form label {
   display: flex;
   flex-direction: column;
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  gap: 24px;
-  line-height: 150%;
-  color: #02060a;
   gap: 8px;
-}
-
-.form-name {
-  border: 1px solid rgba(255, 255, 255, 0);
-  border-radius: 12px;
-  padding: 8px 12px;
-  width: 640px;
-  height: 40px;
-  background: rgba(2, 6, 10, 0.05);
+  font-size: 14px;
 }
 
 .adopt-text {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
+  /* line-height: 21px; */
   line-height: 150%;
   color: #02060a;
-  /* margin: 0;
-  margin-bottom: 8px; */
+}
+
+.form-name {
+  width: 100%;
+  height: 37px;
+  padding: 8px 12px;
+  border-radius: 12px;
+  border: none;
+  background: rgba(2, 6, 10, 0.05);
 }
 
 .adopt-textarea {
-  border: 1px solid rgba(255, 255, 255, 0);
-  border-radius: 12px;
-  padding: 12px;
-  width: 640px;
+  width: 100%;
   height: 180px;
+  padding: 12px;
+  border-radius: 12px;
+  border: none;
   background: rgba(2, 6, 10, 0.05);
 }
 
 .submit-adopt {
-  border: 1px solid #88765c;
-  border-radius: 8px;
-  padding: 12px 24px;
-  width: 240px;
-  height: 48px;
-  background-color: #88765c;
-  align-items: center;
-  flex-direction: column;
-  display: block;
   margin: 0 auto;
+  width: 100%;
+  /* max-width: 295px; */
+  height: 45px;
+  border-radius: 8px;
+  background-color: #88765c;
+  border: 1px solid #88765c;
+  cursor: pointer;
+}
+
+.submit-adopt:hover {
+  background: #eee9e3;
+}
+
+.submit-adopt:focus {
+  background: #c3b49d;
+  outline: none;
 }
 
 .text-submit-adopt {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
-  font-size: 16px;
-  display: block;
-  line-height: 150%;
   color: #fff;
-  margin: 0 auto;
-  align-items: center;
+  font-size: 14px;
+  text-align: center;
+  line-height: 150%;
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding: 64px 32px;
+  }
+
+  .adopt-modal {
+    max-width: 704px;
+    padding: 64px 32px;
+  }
+
+  .adopt-modal-title {
+    font-size: 36px;
+  }
+
+  .adopt-modal-form label {
+    font-size: 16px;
+  }
+
+  .submit-adopt {
+    max-width: 240px;
+    height: 45px;
+  }
+
+  .text-submit-adopt {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .adopt-modal {
+    max-width: 805px;
+  }
+
+  .adopt-modal-title {
+    font-size: 48px;
+  }
+
+  .form-name {
+    height: 40px;
+  }
+  .adopt-textarea {
+    width: 100%;
+    height: 180px;
+  }
+  .submit-adopt {
+    width: 240px;
+    height: 48px;
+  }
 }
