--- a/src/partials/adopt-modal.html
+++ b/src/partials/adopt-modal.html
@@ -12,17 +12,33 @@
     <form class="adopt-modal-form">
       <label>
         <p class="adopt-text">Ім’я*</p>
-        <input type="text" class="form-name" name="name" required />
+        <input
+          type="text"
+          class="form-name"
+          name="name"
+          placeholder="Андрій"
+          required
+        />
       </label>
 
       <label>
         <p class="adopt-text">Телефон*</p>
-        <input type="tel" class="form-name" name="phone" required />
+        <input
+          type="tel"
+          class="form-name"
+          name="phone"
+          placeholder="+38 (095) 555 99 22"
+          required
+        />
       </label>
 
       <label>
         <p class="adopt-text">Коментар</p>
-        <textarea class="form-name adopt-textarea" name="comment"></textarea>
+        <textarea
+          class="form-name adopt-textarea"
+          name="comment"
+          placeholder="Напишіть ваш коментар"
+        ></textarea>
       </label>
 
       <button type="submit" class="submit-adopt">
