--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -230,4 +230,4 @@
     </div>
   </div>
 </section>
-<script type="module" src="/main.js"></script>
+<script type="module" src="../main.js"></script>
