--- a/src/css/testimonial.css
+++ b/src/css/testimonial.css
@@ -4,8 +4,8 @@
   gap: 4px;
 }
 .star {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 .star svg {
   width: 100%;
@@ -20,7 +20,7 @@
 }
 /* Половинка зірки */
 .star.half svg {
-  fill: url(#half-gradient);
+  fill: none;
 }
 /* Порожня зірка */
 .star svg use[href*="icon-star-outline"] {
@@ -83,6 +83,7 @@
 }
 /* Swiper */
 .testimonials-swiper {
+  position: relative;
   width: 100%;
 }
 .testimonials-wrapper {
@@ -92,48 +93,56 @@
 .swiper-controls {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex-direction: row;
 }
-.testimonials-pagination {
+.swiper-controls .testimonials-pagination {
   position: static;
-  text-align: left;
   align-items: center;
-  width: auto !important;
   display: flex;
   flex-direction: row;
+  bottom: auto;
   gap: 8px;
+  padding: 20px 0px;
 }
-.swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
+.swiper-controls .swiper-pagination-bullet {
+  width: 4px;
+  height: 4px;
   border-radius: 100%;
   fill: #02060a;
   background-color: #d1d5db !important;
-  opacity: 1;
-  transition: transform 0.3s ease, background-color 0.3s ease;
+  transform: scale(0.6);
+  transition: transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
 }
-.swiper-pagination-bullet-active {
+.swiper-controls .swiper-pagination-bullet-active {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  transform: scale(1.6);
+  opacity: 1;
   background-color: #02060a !important;
   transform: scale(1.5);
 }
-.swiper-navigation-buttons {
-  display: flex;
-  gap: 16px;
-  position: relative;
-  min-width: 120px;
-  height: 64px;
-  align-items: center;
-  justify-content: flex-end;
+.swiper-controls .swiper-pagination-bullet-active-prev,
+.swiper-controls .swiper-pagination-bullet-active-next{
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  fill: #02060a;
+  transform: scale(1.1);
+  opacity: 0.6;
 }
 /* Кнопки навігації */
-.swiper-navigation-buttons {
+.swiper-controls .testimonial-navigation-buttons{
   display: flex;
   gap: 16px;
   position: relative;
-  min-width: 120px;
+  min-width: 112px;
+  height: 48px;
+  align-items: center;
+  justify-content: center;
 }
-.testimonials-prev,
-.testimonials-next {
+.js-testimonials-next,
+.js-testimonials-prev {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -149,23 +158,35 @@
   outline: none;
   cursor: pointer;
 }
-.testimonials-prev:hover,
-.testimonials-prev:focus,
-.testimonials-next:hover,
-.testimonials-next:focus {
+.js-testimonials-next:hover,
+.js-testimonials-next:focus,
+.js-testimonials-prev:hover,
+.js-testimonials-prev:focus {
   border: 1px solid rgba(2, 6, 10, 0.6);
   cursor: pointer;
 }
-.testimonials-prev:active,
-.testimonials-next:active {
+.swiper-controls .js-testimonials-next:active,
+.swiper-controls .js-testimonials-prev:active {
   border: 1px solid rgba(2, 6, 10, 0.6);
   box-shadow: inset 0 4px 6px -2px rgba(0, 0, 0, 0.03),
   inset 0 12px 16px -4px rgba(0, 0, 0, 0.08);
   background-color: #eee9e3;
   cursor: pointer;
 }
-.icon-back,
-.icon-forward {
+.js-testimonials-prev.swiper-button-isNotActive,
+.js-testimonials-next.swiper-button-isNotActive {
+  cursor: default;        
+  opacity: 0.3;           
+  pointer-events: none;   
+}
+
+
+.js-testimonials-prev:hover:not(.swiper-button-isNotActive),
+.js-testimonials-next:hover:not(.swiper-button-isNotActive) {
+  opacity: 0.8;
+}
+.swiper-controls .icon-back,
+.swiper-controls .icon-forward {
   width: 24px;
   height: 24px;
   stroke: #02060a;
@@ -184,6 +205,7 @@
     display: none;
   }
 }
+
 /* Desktop */
 @media screen and (min-width: 1440px) {
   .testimonial-title,
