--- a/src/partials/testimonial.html
+++ b/src/partials/testimonial.html
@@ -12,14 +12,14 @@
       <div class="swiper-wrapper testimonials-wrapper"></div>
       <div class="swiper-controls">
         <div class="swiper-pagination testimonials-pagination"></div>
-        <div class="swiper-navigation-buttons">
-          <div class="swiper-button-prev testimonials-prev">
-            <svg class="icon-back">
+        <div class="testimonial-navigation-buttons">
+          <div class="testimonials-prev js-testimonials-prev">
+            <svg class="icon-back" viewBox="0 0 24 24">
               <use href="../img/sprite.svg#icon-arrow_back"></use>
             </svg>
           </div>
-          <div class="swiper-button-next testimonials-next">
-            <svg class="icon-forward">
+          <div class="testimonials-next js-testimonials-next">
+            <svg class="icon-forward" viewBox="0 0 24 24">
               <use href="../img/sprite.svg#icon-arrow_forward"></use>
             </svg>
           </div>
