--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -14,9 +14,13 @@
   margin-bottom: 40px;
 }
 
+.gallerySwiper {
+  position: relative;
+}
+
 .gallerySlide {
   position: relative;
-  padding: 24px;
+  padding: 28px;
 }
 
 .gallerySlide img {
@@ -27,28 +31,94 @@
 
 .p-overlay {
   position: absolute;
-  left: 50%;
-  bottom: 20px;
+  padding: 20px;
   transform: translateX(-50%);
   width: calc(100% - 40px);
-  max-width: 375px;
-	padding: 20px;
+  max-width: 335px;
+  height: auto;
 
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  gap: 24px;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   color: #f6f4f1;
 }
-.galleryPagination,
-.gallerySwiper .swiper-button-next,
-.gallerySwiper .swiper-button-prev {
+.galleryBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #c3b49d;
+  transition: border-color 0.2s ease;
+  border-radius: 8px;
+  width: 48px;
+  height: 48px;
+  background-color: #eee9e3;
+}
+.gallerySwiper .swiper-button-next::after,
+.gallerySwiper .swiper-button-prev::after {
+  content: none;
+}
+.gallerySwiper .swiper-button-prev,
+.gallerySwiper .swiper-button-next {
+  position: static;
+  transform: none;
+  margin: 0;
+}
+.galleryControls {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 24px;
+  margin-top: 24px;
+  padding: 0 24px;
+}
+
+.galleryNavBtn {
+  display: flex;
+  gap: 8px;
+}
+
+.galleryPagination {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px;
+}
+
+.galleryBtn .gallery-btn__icon {
+  width: 24px;
+  height: 24px;
   display: block;
+  stroke: #02060a;
+}
+
+.galleryBtn:hover,
+.galleryBtn:focus-visible {
+  border-color: rgba(2, 6, 10, 0.6);
+}
+.galleryBtn:active {
+  box-shadow: inset 0 4px 6px -2px rgba(0, 0, 0, 0.03),
+    inset 0 12px 16px -4px rgba(0, 0, 0, 0.08);
+  background-color: #eee9e3;
+}
+.gallerySwiper .swiper-button-disabled {
+  opacity: 0.4;
+  border: 1px solid #f6f4f1;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.gallerySwiper .swiper-pagination-bullet {
+  width: 6px;
+  height: 6px;
+  background-color: #02060a;
+  opacity: 0.2;
+}
+
+.gallerySwiper .swiper-pagination-bullet-active {
+  width: 8px;
+  height: 8px;
+  opacity: 1;
 }
 
 @media (min-width: 768px) {
@@ -56,89 +126,23 @@
     padding: 64px 0;
   }
   .p-overlay {
-    left: 32px;
+    padding: 32px;
     transform: none;
-    bottom: 32px;
     width: calc(100% - 64px);
     max-width: 548px;
-		padding: 32px
   }
 
-  .galleryBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #c3b49d;
-    transition: border-color 0.2s ease;
-    border-radius: 8px;
-    width: 48px;
-    height: 48px;
-    background-color: #eee9e3;
-  }
-  .gallerySwiper .swiper-button-next::after,
-  .gallerySwiper .swiper-button-prev::after {
-    content: none;
-  }
-
-  .galleryBtn .gallery-btn__icon {
-    width: 24px;
-    height: 24px;
-    display: block;
-    stroke: #02060a;
-  }
-
-  .galleryBtn:hover,
-  .galleryBtn:focus-visible {
-    border-color: rgba(2, 6, 10, 0.6);
-  }
-  .galleryBtn:active {
-    box-shadow: inset 0 4px 6px -2px rgba(0, 0, 0, 0.03),
-      inset 0 12px 16px -4px rgba(0, 0, 0, 0.08);
-    background-color: #eee9e3;
-  }
-  .gallerySwiper .swiper-button-disabled {
-    opacity: 0.4;
-    border: 1px solid #f6f4f1;
-    cursor: not-allowed;
-    pointer-events: none;
-  }
-
-  .gallerySwiper .swiper-pagination-bullet {
-    width: 8px;
-    height: 8px;
-    background-color: #02060a;
-    opacity: 0.2;
-  }
-
-  .gallerySwiper .swiper-pagination-bullet-active {
-    opacity: 1;
-  }
   .gallerySwiper .swiper-button-prev,
   .gallerySwiper .swiper-button-next {
-    display: flex;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
   }
 
-  .galleryPagination {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .gallerySwiper {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
-
-  .gallerySwiper .swiper-wrapper {
-    order: 1;
-  }
-
   .gallerySwiper .swiper-pagination {
-    position: static;
-    order: 2;
     margin-top: 24px;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -151,7 +155,7 @@
   }
   .p-overlay {
     font-size: 18px;
-		padding: 64px;
+    padding: 64px;
   }
 
   .gallerySwiper .swiper-pagination {
