--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -195,38 +195,40 @@
           </p>
         </div>
       </div>
+      <div class="galleryControls">
+        <div class="swiper-pagination galleryPagination"></div>
+        <div class="galleryNavBtn">
+          <button
+            class="swiper-button-prev galleryBtn"
+            type="button"
+            aria-label="previous"
+          >
+            <svg
+              class="gallery-btn__icon"
+              width="24"
+              height="24"
+              aria-hidden="true"
+            >
+              <use href="../img/sprite.svg#icon-arrow_back"></use>
+            </svg>
+          </button>
 
-      <div class="swiper-pagination galleryPagination"></div>
-
-      <button
-        class="swiper-button-prev galleryBtn"
-        type="button"
-        aria-label="previous"
-      >
-        <svg
-          class="gallery-btn__icon"
-          width="24"
-          height="24"
-          aria-hidden="true"
-        >
-          <use href="../img/sprite.svg#icon-arrow_back"></use>
-        </svg>
-      </button>
-
-      <button
-        class="swiper-button-next galleryBtn"
-        type="button"
-        aria-label="next"
-      >
-        <svg
-          class="gallery-btn__icon"
-          width="24"
-          height="24"
-          aria-hidden="true"
-        >
-          <use href="../img/sprite.svg#icon-arrow_forward"></use>
-        </svg>
-      </button>
+          <button
+            class="swiper-button-next galleryBtn"
+            type="button"
+            aria-label="next"
+          >
+            <svg
+              class="gallery-btn__icon"
+              width="24"
+              height="24"
+              aria-hidden="true"
+            >
+              <use href="../img/sprite.svg#icon-arrow_forward"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </section>
