--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -20,7 +20,8 @@
 
 .gallerySlide {
   position: relative;
-  padding: 28px;
+  padding: 0;
+	margin-bottom: 48px;
 }
 
 .gallerySlide img {
@@ -30,13 +31,20 @@
 }
 
 .p-overlay {
+	box-sizing: content-box;
   position: absolute;
-  padding: 20px;
+  left: 50%;
+  bottom: 20px;
   transform: translateX(-50%);
   width: calc(100% - 40px);
-  max-width: 335px;
-  height: auto;
+  max-width: 375px;
+	padding: 20px;
 
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 24px;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -69,7 +77,7 @@
   align-items: center;
   justify-content: flex-end;
   gap: 24px;
-  margin-top: 24px;
+  /* margin-top: 24px; */
   padding: 0 24px;
 }
 
@@ -125,9 +133,14 @@
   .gallery {
     padding: 64px 0;
   }
+	.gallery .container {
+		padding: 0 12px;
+	}
   .p-overlay {
+    left: 32px;
     padding: 32px;
     transform: none;
+    bottom: 32px;
     width: calc(100% - 64px);
     max-width: 548px;
   }
@@ -138,6 +151,10 @@
     top: 50%;
     transform: translateY(-50%);
   }
+
+	.gallerySlide {
+  	padding: 28px;
+	}
 
   .gallerySwiper .swiper-pagination {
     margin-top: 24px;
@@ -150,6 +167,9 @@
   .gallery {
     padding: 80px 0;
   }
+	.gallery .container {
+		padding: 0 44px;
+	}
   .galleryTitle {
     font-size: 48px;
   }
