--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,9 +3,9 @@
         <div class="footer-nav-social-menu">
             <nav class="footer-nav">
                 <a href="/index.html" class="footer-logo">
-                    <svg class="footer-logo-icon">
+                    <!-- <svg class="footer-logo-icon">
                         <use href="../img/sprite.svg#icon-alternate-false"></use>
-										</svg>
+										</svg> -->
                 </a>
                 <div class="footer-menu">
                     <ul class="footer-menu-list">
@@ -20,18 +20,10 @@
             <div class="footer-social-links">
                 <ul class="footer-social-links-list">
                     <li class="footer-social-links-list-item">
-                        <a href="https://www.facebook.com/" class="footer-social-icon" target="_blank">
-                            <svg class="footer-social-icon-unit">
-                                <use href="../img/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
+                        <a href="https://www.facebook.com/" class="footer-social-icon" target="_blank"></a>
                     </li>
-										<li>
-                        <a href="https://www.instagram.com/" class="footer-social-icon" target="_blank">
-                            <svg class="footer-social-icon-unit">
-                                <use href="../img/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
+										<li class="footer-social-links-list-item">
+                        <a href="https://www.instagram.com/" class="footer-social-icon" target="_blank"></a>
                     </li>
                 </ul>
             </div>
